[gd_scene load_steps=2 format=3 uid="uid://dpu67fuqkio1s"]

[ext_resource type="Script" path="res://levels/-1/ui.gd" id="1_ivvf3"]

[node name="Ui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ivvf3")

[node name="PlayUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PlayUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 920.0
offset_right = 960.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="StartMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HighestScoreLabel" type="Label" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -161.5
offset_right = 20.0
offset_bottom = -138.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartBtn" type="Button" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -65.5
offset_right = 28.0
offset_bottom = -34.5
grow_horizontal = 2
grow_vertical = 2
text = "START"

[node name="BackBtn" type="Button" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = 34.5
offset_right = 28.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
text = "HOME"

[node name="LoseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RecordBreakingLabel" type="Label" parent="LoseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -265.5
offset_right = 61.0
offset_bottom = -242.5
grow_horizontal = 2
grow_vertical = 2
text = "BREAK_RECORD"

[node name="HighestScoreLabel" type="Label" parent="LoseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -165.5
offset_right = 61.0
offset_bottom = -142.5
grow_horizontal = 2
grow_vertical = 2
text = "BREAK_RECORD"

[node name="AgainBtn" type="Button" parent="LoseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -65.5
offset_right = 52.0
offset_bottom = -34.5
grow_horizontal = 2
grow_vertical = 2
text = "PLAY_AGAIN"

[node name="BackBtn" type="Button" parent="LoseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = 34.5
offset_right = 28.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
text = "HOME"

[connection signal="pressed" from="StartMenu/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="StartMenu/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="LoseMenu/AgainBtn" to="." method="_on_again_btn_pressed"]
[connection signal="pressed" from="LoseMenu/BackBtn" to="." method="_on_back_btn_pressed"]
